--- a/restaurant/templates/restaurant/main.html
+++ b/restaurant/templates/restaurant/main.html
@@ -7,7 +7,7 @@
         <h1>Futago Udon</h1>
     </div>
 
-    <img src="{% static 'images/futago.jpeg' %}" alt="Image of Futago Udon">
+    <img src="{% static 'images2/futago.jpeg' %}" alt="Image of Futago Udon">
 
     <div class="restaurant-info">
         <h2>Location</h2>
