--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -8,12 +8,14 @@
         <tr>
             <th>First Name</th>
             <th>Last Name</th>
+            <th>City</th>
             <th>Profile Image</th>
         </tr>
         {% for profile in profiles %}
         <tr>
             <td>{{ profile.first_name }}</td>
             <td>{{ profile.last_name }}</td>
+            <td>{{ profile.city }}</td>
             <td>
                 {% if profile.image_url %}
                     <img src="{{ profile.image_url }}" alt="{{ profile.first_name }}" width="100">
@@ -24,7 +26,7 @@
         </tr>
         {% empty %}
         <tr>
-            <td>No profiles found</td> <!-- Adjusted colspan to match the number of columns -->
+            <td>No profiles found</td> 
         </tr>
         {% endfor %}
     </table>
