--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mini FB App</title>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'mini_fb_css.css' %}">
+    <link rel="stylesheet" href="{% static 'mini_fb/base.css' %}">
 </head>
 <body>
 
@@ -18,6 +18,10 @@
 
     <!-- Navigation links -->
     <nav>
+        <ul>
+            <li><a href="{% url 'show_all_profiles' %}">All Profiles</a></li>
+            <li><a href="{% url 'create_profile' %}">Create Profile</a></li>
+        </ul>
     </nav>
 
     <div>
