--- a/mini_fb/templates/mini_fb/show_all_profiles.html
+++ b/mini_fb/templates/mini_fb/show_all_profiles.html
@@ -1,27 +1,24 @@
 <!-- templates/show_all_profiles.html -->
-
 {% extends 'mini_fb/base.html' %}
 
 {% block content %}
     <h2>All Profiles</h2>
-    <table>
+    <table id="all_profiles_table">
         <tr>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>City</th>
-            <th>Profile Image</th>
+            <th>Profile</th> 
         </tr>
         {% for profile in profiles %}
         <tr>
-            <td>{{ profile.first_name }}</td>
-            <td>{{ profile.last_name }}</td>
-            <td>{{ profile.city }}</td>
-            <td>
+            <td class="profile-cell">
                 {% if profile.image_url %}
-                    <img src="{{ profile.image_url }}" alt="{{ profile.first_name }}" width="100">
+                    <a href="{% url 'show_profile' profile.id %}">
+                        <img src="{{ profile.image_url }}" alt="{{ profile.first_name }}" width="100" class="profile-image">
+                    </a>
                 {% else %}
-                    No image available
+                    <p>No image available</p>
                 {% endif %}
+                <a href="{% url 'show_profile' profile.id %}"><h3>{{ profile.first_name }} {{ profile.last_name }}</h3></a>
+                <p>{{ profile.city }}</p>
             </td>
         </tr>
         {% empty %}
