--- a/mini_fb/templates/mini_fb/create_status_form.html
+++ b/mini_fb/templates/mini_fb/create_status_form.html
@@ -2,9 +2,10 @@
 
 {% block content %}
     <h2>Create a Status Message</h2>
-    <form method="post">
+    <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <table>
+            <input type="file" name = "files" multiple />
             {{ form.as_table }}
         </table>
         <input type="submit" value="Create Status">
