--- a/mini_fb/templates/mini_fb/show_profile.html
+++ b/mini_fb/templates/mini_fb/show_profile.html
@@ -6,6 +6,8 @@
         <ul>
             <li><a href="{% url 'create_status' profile.id %}">Create Status</a></li>
             <li><a href="{% url 'update_profile' profile.id %}">Update Profile</a></li>
+            <li><a href="{% url 'friend_suggestions' profile.id %}">View Friend Suggestions</a></li>
+            <li><a href="{% url 'news_feed' profile.id %}">View News Feed</a></li>
         </ul>
     </nav>
     <img src="{{ profile.image_url }}" alt="{{ profile.first_name }}'s profile picture" style="width:200px;height:200px;">
@@ -40,6 +42,18 @@
             {% endfor %}
         {% empty %}
             <li>No status messages available.</li>
+        {% endfor %}
+        <h3>Friends</h3>
+    <ul>
+        {% for friend in profile.get_friends %}
+            <li>
+                <a href="{% url 'show_profile' friend.id %}">
+                    {{ friend.first_name }} {{ friend.last_name }}
+                    <img src="{{ friend.image_url }}" alt="{{ friend.first_name }}'s profile picture" style="width:200px;height:200px;">
+                </a>
+            </li>
+        {% empty %}
+            <li>No friends found</li>
         {% endfor %}
     </ul>
     
