--- a/staticfiles/mini_fb/base.css
+++ b/staticfiles/mini_fb/base.css
@@ -6,8 +6,9 @@ body {
     display: flex;
     flex-direction: column; 
     min-height: 100vh; 
-    background-color: aliceblue;
+    background-color: yellow;
 }
+
 
 h1, h2 {
     color: black;
@@ -42,6 +43,7 @@ nav > ul {
     margin: 0;
     display: inline-block;
     background-color: blue;
+    text-decoration: none;
 }
 
 nav > ul > li {
@@ -107,5 +109,51 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: lightblue; 
 }
+
+#delete-update-container {
+    display: flex; 
+    justify-content: left; 
+    margin: 10px 0; 
+}
+
+.delete a {
+    background-color: blue;
+    color: white;
+    text-decoration: none;
+}
+
+.delete a:hover {
+    background-color: #357ABD;
+    color: white;
+    
+}
+
+/* Styling for update link */
+.update a {
+    background-color: blue;
+    color: white;
+    text-decoration: none;
+}
+
+.update a:hover {
+    background-color: #357ABD;
+    color: white;
+}
+
+#status-image-container {
+    display: inline-block;
+}
+
+#status-image-container img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+
+
+
+
 
 
