--- a/mini_fb/templates/mini_fb/base.html
+++ b/mini_fb/templates/mini_fb/base.html
@@ -22,6 +22,15 @@
             <li><a href="{% url 'show_all_profiles' %}">All Profiles</a></li>
             <li><a href="{% url 'create_profile' %}">Create Profile</a></li>
         </ul>
+        <p>
+            {% if request.user.is_authenticated %}
+            Logged in user: {{request.user}}
+            <a href="{% url 'logout' %}">Logout</a>
+            {% else %}
+            Not logged in.
+            <a href="{% url 'login' %}">Login</a>
+            {% endif %}
+        </p>
     </nav>
 
     <div>
