--- a/mini_fb/templates/mini_fb/show_profile.html
+++ b/mini_fb/templates/mini_fb/show_profile.html
@@ -4,10 +4,12 @@
     <h2>{{ profile.first_name }}'s Profile</h2>
     <nav>
         <ul>
-            <li><a href="{% url 'create_status' profile.id %}">Create Status</a></li>
-            <li><a href="{% url 'update_profile' profile.id %}">Update Profile</a></li>
-            <li><a href="{% url 'friend_suggestions' profile.id %}">View Friend Suggestions</a></li>
-            <li><a href="{% url 'news_feed' profile.id %}">View News Feed</a></li>
+        {% if user.is_authenticated and user == profile.user %}
+            <li><a href="{% url 'create_status'%}">Create Status</a></li>
+            <li><a href="{% url 'update_profile' %}">Update Profile</a></li>
+            <li><a href="{% url 'friend_suggestions'  %}">View Friend Suggestions</a></li>
+            <li><a href="{% url 'news_feed'  %}">View News Feed</a></li>
+        {% endif %}
         </ul>
     </nav>
     <img src="{{ profile.image_url }}" alt="{{ profile.first_name }}'s profile picture" style="width:200px;height:200px;">
@@ -25,6 +27,7 @@
     <ul>
         {% for status in status_messages %}
             <li>{{ status.created_at }} - {{ status.status_message }}</li>
+            {% if user.is_authenticated and user == profile.user %}
             <div id="delete-update-container">
                 <nav class="delete">
                     <a href="{% url 'delete_status' status.pk %}">Delete</a>
@@ -33,6 +36,7 @@
                     <a href="{% url 'update_status' status.pk %}">Update</a>
                 </nav>
             </div>
+            {% endif %}
             {% for img in status.get_images %}
                 <div id="status-image-container">
                     <img src='{{ img.img.url }}' alt='{{ img.img.url }}'>
