--- a/mini_fb/templates/mini_fb/create_profile_form.html
+++ b/mini_fb/templates/mini_fb/create_profile_form.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h2>Create a Profile</h2>
-    <form method="post" enctype="multipart/form-data">
+    <form method="post" enctype="multipart/form-data" action="{% url 'create_profile' %}">
         {% csrf_token %}
         <h3>Create User</h3>
         <table>
