--- a/Stack/templates/Stack/profile.html
+++ b/Stack/templates/Stack/profile.html
@@ -8,6 +8,7 @@
             <p>First Name: {{ profile.first_name }}</p>
             <p>Last Name: {{ profile.last_name }}</p>
             <p>Email: {{ profile.email }}</p>
+            <p>Balance: {{ profile.balance }}</p>
         </div>
         <div class="profile-actions">
             <h2>Actions</h2>
