added header comments

--- a/Stack/templates/Stack/base.html
+++ b/Stack/templates/Stack/base.html
@@ -1,5 +1,13 @@
 <!-- templates/base.html -->
 
+<!-- 
+    File: base.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: base template for the Stack app. This template is used to create the layout of the app. Includes the navigation links
+-->
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
