--- a/Stack/templates/Stack/investing.html
+++ b/Stack/templates/Stack/investing.html
@@ -1,3 +1,11 @@
+<!-- 
+    File: investing.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: shows the investing page of the user, including a bar chart, portfolio, and watchlist, and balance
+-->
+
+
 {% extends 'Stack/base.html' %}
 
 {% block content %}
