--- a/Stack/templates/Stack/login.html
+++ b/Stack/templates/Stack/login.html
@@ -1,4 +1,12 @@
+<!-- 
+    File: login.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: login page for the Stack app. This page allows users to login to their account.
+-->
+
 {% extends 'Stack/base.html' %}
+
 
 {% block content %}
     <div class="login-container">
