--- a/Stack/templates/Stack/logout.html
+++ b/Stack/templates/Stack/logout.html
@@ -1,3 +1,10 @@
+<!-- 
+    File: logout.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: logout page for the user to logout of their account.
+-->
+
 {% extends 'Stack/base.html' %}
     
     {% block content %}
