--- a/Stack/templates/Stack/profile.html
+++ b/Stack/templates/Stack/profile.html
@@ -1,3 +1,11 @@
+<!-- 
+    File: profile.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: page that displays the user's profile information, including first name, last name, email, and balance. 
+    Includes a link to edit the profile.
+-->
+
 {% extends 'Stack/base.html'%}
 
 {% block content %}
