--- a/Stack/templates/Stack/register.html
+++ b/Stack/templates/Stack/register.html
@@ -1,3 +1,10 @@
+<!-- 
+    File: register.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: page that allows the user to register for an account. This page includes fields for first name, last name, email, and password.
+-->
+
 {% extends "Stack/base.html" %}
 
 {% block content %}
