--- a/Stack/templates/Stack/stock.html
+++ b/Stack/templates/Stack/stock.html
@@ -1,3 +1,10 @@
+<!-- 
+    File: stock.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: page that displays information about a stock, including the name, ticker, price, and shares owned. Users can buy, sell, or add the stock to their watchlist.
+-->
+
 {% extends 'Stack/base.html' %}
 
 {% block content %}
