--- a/Stack/templates/Stack/stock_list.html
+++ b/Stack/templates/Stack/stock_list.html
@@ -1,3 +1,10 @@
+<!-- 
+    File: stock_list.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: page that displays a list of stocks, including the name, ticker, and price. Users can search for stocks and view details of individual stocks.
+-->
+
 {% extends 'Stack/base.html' %}
 
 {% block content %}
