--- a/Stack/templates/Stack/transactions.html
+++ b/Stack/templates/Stack/transactions.html
@@ -1,3 +1,10 @@
+<!-- 
+    File: transactions.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: page that displays the user's transactions, including the stock, quantity, price, date, and action.
+-->
+
 {% extends "Stack/base.html" %}
 
 {% block content %}
