--- a/Stack/templates/Stack/update_profile.html
+++ b/Stack/templates/Stack/update_profile.html
@@ -1,3 +1,10 @@
+<!-- 
+    File: update_profile.html
+    Author: Jiang Cheng Liu (jiangcl@bu.edu)
+    Date: 12/10/2024
+    Description: page that allows the user to update their profile information, including first name, last name, email, and balance.
+-->
+
 {% extends 'Stack/base.html' %}
 
 {% block content %}
